Making Navbar Disappear on Mobile Screens There was a problem where mobile screens would not display correctly because of the navbar. Therefore, a media query was created to remove the navbar on screens less than 600 pixels wide.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Birthstone&display=swap');
 
 body {
     font-family: "Cabin", sans-serif;
@@ -7,6 +8,11 @@ body {
 header {
     display: flex;
     font-size: 1rem;
+}
+
+.logo p {
+    font-family: "Birthstone";
+    font-size: 3rem;
 }
 
 h1 {
@@ -27,4 +33,10 @@ img {
 
 footer {
     text-align: center;
+}
+
+@media screen and (width < 600px) {
+    .navbar {
+        display:none;
+    }
 }
